--- a/pig/Makefile
+++ b/pig/Makefile
@@ -9,11 +9,11 @@ TARGETS = $(BINARY)
 .PHONY: all $(TARGETS)
 all: $(TARGETS)
 ifdef DOCKER
-	docker build -t "joy/pig:`date +%Y%m%d%H%M`" .
+	docker build -t "pcc/pig:`date +%Y%m%d%H%M`" .
 endif
 
 $(BINARY):
-	go build -race -ldflags "-X main.BuildTimestamp=`date +%Y%m%d.%H%M%S` -X main.BuildCommit=`git rev-parse HEAD`" -o $(BINARY)
+	go build -ldflags "-X main.BuildTimestamp=`date +%Y%m%d.%H%M%S` -X main.BuildCommit=`git rev-parse HEAD`" -o $(BINARY)
 
 $(CLEAN):
 	go clean
