--- a/feed/conf/app.conf
+++ b/feed/conf/app.conf
@@ -7,14 +7,14 @@
 name: "feed"
 model: "release"
 version: "1.0"
-http_address: ":7000"
+http_address: ":7010"
 log_dir: "logs/"
 
 
 #-----------------------
 # database
 #-----------------------
-database: "postgres://postgres:@localhost/account?sslmode=disable"
+database: "postgres://postgres:@localhost/feed?sslmode=disable"
 
 
 #-----------------------
