fix bugs of action

--- a/action/conf/app.conf
+++ b/action/conf/app.conf
@@ -14,7 +14,7 @@ log_dir: "logs/"
 #-----------------------
 # database
 #-----------------------
-database: "postgres://postgres:@localhost/account?sslmode=disable"
+database: "postgres://postgres:@localhost/action?sslmode=disable"
 
 
 #-----------------------
