--- a/pig/Makefile
+++ b/pig/Makefile
@@ -8,9 +8,9 @@ TARGETS = $(BINARY)
 
 .PHONY: all $(TARGETS)
 all: $(TARGETS)
-ifdef DOCKER
-	docker build -t "pcc/pig:`date +%Y%m%d%H%M`" .
-endif
+# ifdef DOCKER
+# 	docker build -t "pcc/pig:`date +%Y%m%d%H%M`" .
+# endif
 
 $(BINARY):
 	go build -ldflags "-X main.BuildTimestamp=`date +%Y%m%d.%H%M%S` -X main.BuildCommit=`git rev-parse HEAD`" -o $(BINARY)
