--- a/sdk/.gitignore
+++ b/sdk/.gitignore
@@ -1,3 +1,7 @@
+
+# Created by https://www.gitignore.io/api/go
+
+### Go ###
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -23,7 +27,4 @@ _testmain.go
 *.test
 *.prof
 
-logs
-data
-
-*.log
+logs/
