connect action to feed

--- a/feed/conf/app.conf
+++ b/feed/conf/app.conf
@@ -21,5 +21,5 @@ database: "postgres://postgres:@localhost/feed?sslmode=disable"
 # MQ
 #-----------------------
 queue:
-  nsqd_address: "10.164.25.29:4150"
-  lookupd_address: "10.164.25.29:4161"
+  nsqd_address: "mq.chideat.xyz:4150"
+  lookupd_address: "mq.chideat.xyz:4161"
