clean user microservice

--- a/user/conf/app.conf
+++ b/user/conf/app.conf
@@ -4,23 +4,25 @@
 #-----------------------
 # Default
 #-----------------------
+group: 1
 name: "user"
 model: "release"
 version: "1.0"
-http_address: "127.0.0.1:7020"
+http_addr: ":7000"
+rpc_addr: ":7001"
 log_dir: "logs/"
-static_dir: "static/"
 
 
 #-----------------------
 # database
 #-----------------------
-database: "postgres://postgres:@localhost/account?sslmode=disable"
+database: "postgres://postgres:@localhost/user?sslmode=disable"
 
 #-----------------------
 # cache
 #-----------------------
 caches:
-  cache_1: "127.0.0.1:7027"
-  cache_2: "127.0.0.1:7028"
-  cache_3: "127.0.0.1:7029"
+  cache_1: "pcc1:7006"
+  cache_2: "pcc1:7007"
+  cache_3: "pcc1:7008"
+
