--- a/action/conf/app.conf
+++ b/action/conf/app.conf
@@ -4,10 +4,12 @@
 #-----------------------
 # Default
 #-----------------------
+group: 1
 name: "action"
 model: "release"
 version: "1.0"
-http_address: ":7030"
+http_addr: ":7010"
+rpc_addr: ":7011"
 log_dir: "logs/"
 
 
@@ -16,10 +18,20 @@ log_dir: "logs/"
 #-----------------------
 database: "postgres://postgres:@localhost/action?sslmode=disable"
 
+#-----------------------
+# cache
+#-----------------------
+caches:
+  cache_1: "pcc1:7016"
+  cache_2: "pcc1:7017"
+  cache_3: "pcc1:7018"
 
-#-----------------------
-# MQ
-#-----------------------
-queue:
-  nsqd_address: "mq.chideat.xyz:4150"
-  lookupd_address: "mq.chideat.xyz:4161"
+
+####################
+# MQ 
+####################
+mq:
+  producer_tcp_address: "push1.appdao.com:4150"
+  producer_http_address: "push1.appdao.com:4151"
+  consumer_tcp_address: "push1.appdao.com:4160"
+  consumer_http_address: "push1.appdao.com:4161"
