update action microservice

--- a/action/conf/app.conf
+++ b/action/conf/app.conf
@@ -13,6 +13,15 @@ rpc_addr: ":7011"
 log_dir: "logs/"
 
 
+
+#-----------------------
+# database
+#-----------------------
+rpc:
+  user_rpc_addr: ":7001"
+
+
+
 #-----------------------
 # database
 #-----------------------
