--- a/user/conf/app.conf
+++ b/user/conf/app.conf
@@ -16,13 +16,12 @@ log_dir: "logs/"
 #-----------------------
 # database
 #-----------------------
-database: "postgres://postgres:@localhost/user?sslmode=disable"
+database: "postgres://postgres:@1.db.pcc/user?sslmode=disable"
 
 #-----------------------
 # cache
 #-----------------------
 caches:
-  cache_1: "pcc1:7006"
-  cache_2: "pcc1:7007"
-  cache_3: "pcc1:7008"
-
+  cache_1: "1.cache.pcc:6379"
+  cache_2: "2.cache.pcc:6379"
+  cache_3: "3.cache.pcc:6379"
